# auth-service

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/api/v1/: auth.py
app/core/: config.py
app/models/: token.py  user.py
app/repositories/: token_repo.py  user_repo.py
app/security/: jwt.py  password.py
app/services/: auth_service.py
app/utils/: token_utils.py
